# JHQ

./: .clang-tidy  .gitignore  README.md
examples/: demo_ivfjhq_test.cpp
jhq/: CMakeLists.txt
jhq/examples/: CMakeLists.txt  demo_jhq_test.cpp
jhq/jhqlib/: CMakeLists.txt  IndexIVFJHQ.cpp  IndexIVFJHQ.h  IndexJHQ.cpp  IndexJHQ.h
jhq/jhqlib/impl/: IndexIVFJHQCodec.cpp  IndexIVFJHQIO.cpp  IndexIVFJHQOptimize.cpp  IndexIVFJHQPredecode.cpp  IndexIVFJHQScanner.cpp  IndexIVFJHQScanner.h  IndexIVFJHQSearch.cpp  IndexIVFJHQTrain.cpp  IndexJHQIO.cpp  IndexJHQSearch.cpp  IndexJHQTrain.cpp
jhqlib/: CMakeLists.txt  IndexIVFJHQ.cpp  IndexIVFJHQ.h  IndexJHQ.cpp  IndexJHQ.h
